data/derived/sp14/progs/unify/prog1392.ml.out
Characters 3-6:
  sin(2);;
     ^^^
Error: This expression has type int but an expression was expected of type
         float
